# ylm_sample_cpp

./: .gitignore  README.md  README_ja.md  readme.txt
sample/CMake/: CMakeLists.txt  README.md  main.cpp
sample/visual_studio2019/: main.cpp  ylm_sample.sln  ylm_sample.vcxproj
src/: ylm_client.cpp
